--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="title_notifications">Notifications</string>
 
     <string name="menu_login">Login</string>
+    <string name="dateformat">yyyy.MM.dd HH:mm:ss.SSS</string>
 </resources>
