--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
 
     <string name="menu_login">Login</string>
     <string name="dateformat">yyyy.MM.dd HH:mm:ss.SSS</string>
+    <string name="title_activity_profile">My Profile</string>
 </resources>
